# Crossplatform-OpenGLS

./: .gitignore  CMakeLists.txt  README.md
OGL/: CMakeLists.txt  main.cpp
OGL/platform/: App.cpp  App.h  App.mm  CmakeLists.txt
OGL/platform/Win32/: CMakeLists.txt
OGL/platform/Win32/context/: OpenGLContext.cpp  OpenGLContext.hpp
OGL/platform/Win32/window/: CMakeLists.txt  Win32Layout.cpp  Win32Layout.h  Win32Window.cpp  Win32Window.h
OGL/platform/X11/: CMakeLists.txt
OGL/platform/X11/context/: ContexG;.cpp  ContextGl.h
OGL/platform/X11/window/: XWindow.cpp  XWindow.h
